tests/error/u64_i64_compare.vow
// TEST: stderr "comparison operands have different types"
// TEST: error-code TypeMismatch
module U64I64Compare

fn main() -> i32 {
  let v: Vec<u64> = Vec::new();
  let i: u64 = 0;
  let b: bool = i < v.len();
  0
}
